# openworld

./: .dockerignore  .gitignore  Cargo.toml
.github/: Dockerfile
.github/workflows/: rust.yml
assets/prefab/: floor.ron  scene.ron
config/: display.ron  input.ron
src/: component.rs  input.rs  main.rs  physics.rs  prefab.rs  terra.rs
src/physics/: components.rs  mod.rs  systems.rs
src/terra/: mod.rs
