[package]
name = "openworld"
version = "0.1.0"
authors = ["tony84727 <tony84727@gmail.com>"]
edition = "2018"

[dependencies]
winit = "*"

[target.'cfg(target_os = "macos")'.dependencies]
amethyst = {git="https://github.com/amethyst/amethyst.git", default_features =false, features = ["metal"]}

[target.'cfg(not(target_os = "macos"))'.dependencies]
amethyst = {git="https://github.com/amethyst/amethyst.git", default_features = false, features = ["vulkan"]}
