[package]
name = "openworld"
version = "0.1.0"
authors = ["tony84727 <tony84727@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = {git="https://github.com/amethyst/amethyst.git"}
shred = {version = "*", features = ["nightly"]}

[features]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
