[package]
name = "openworld"
version = "0.1.0"
authors = ["tony84727 <tony84727@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = {git="https://github.com/amethyst/amethyst.git"}
winit = "*"
nphysics3d = "0.12.3"
ncollide3d = "^0.20.0"
nalgebra = "*"
serde = {version ="^1.0", features = ["derive"]}

[features]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
